tests/snapshots/spanshot_request@17247650786942761812.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: false
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: ~
  request: "&[[&x]]: &[&mut [T]]"
---
&[[&x]] @ p: &[&mut [T]]
// Applying rule `Deref`
[[&x]] @ *p: [&mut [T]]
// Applying rule `Constructor`
[&x] @ (*p).0: &mut [T]
// Applying rule `ConstructorRef`
&x @ &mut (*(*p).0).0: &mut T
// Type error for `&x @ &mut (*(*p).0).0: &mut T`: MutabilityMismatch
