tests/snapshots/spanshot_request@17476972010799105558.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: AllocTemporary, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[&x]: &[&T]`

[&x] @ p: &[&T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &&T
// Applying rule `Deref`
x @ *&(*p).0: &T

// Final bindings:
let x: &T = *&(*p).0
