tests/snapshots/spanshot_request@17645570257892971034.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: permissive
  request: "&mut ref mut x: &mut T"
---
&mut ref mut x @ p: &mut T
// Applying rule `Deref`
ref mut x @ *p: T
// Applying rule `Binding`
x @ &mut *p: &mut T

// Final bindings (simplified):
let x: &mut T = &mut *p
